--- a/.gitignore
+++ b/.gitignore
@@ -1,33 +1,63 @@
-.*.aux
-.*.d
-*.a
-*.cma
-*.cmi
-*.cmo
-*.cmx
-*.cmxa
-*.cmxs
-*.glob
-*.ml.d
-*.ml4.d
-*.mli.d
-*.mllib.d
-*.mlpack.d
-*.native
-*.o
-*.v.d
-*.vio
-*.vo
-*.vok
-*.vos
-.coq-native/
-.csdp.cache
-.lia.cache
-.nia.cache
-.nlia.cache
-.nra.cache
-csdp.cache
-lia.cache
-nia.cache
-nlia.cache
-nra.cache
+<!DOCTYPE html>
+<html>
+    <head>
+        <meta charset="utf-8">
+        <title>Spin-off of "HTML comments"Remade to:All about Rabbits </title>
+    </head>
+    <body>
+    
+    <h1>All about rabbits!</h1>
+    
+        <title>Why bunnies make good pets</title>
+   
+    <style>
+body {background-color:rgb(19, 156, 19);}
+body {color:rgb(125, 200, 240);}
+     #song{color:rgb(255, 0, 0);}
+     #song{background-color:rgb(255, 218, 10);}
+         
+     </style> 
+     
+    <a href="http://www.vetstreet.com/our-pet-experts/bunny-benefits-10-reasons-a-rabbit-might-be-the-pet-for-you"> 
+             <img src="https://upload.wikimedia.org/wikipedia/commons/2/2b/Ufenau_-_Oryctolagus_cuniculus_2011-07-25_17-33-40.jpg"width="174">  </a> <p>click on the picture link above to get more of an inside on why rabbits make GREAT pets!
+             <h1>Info on rabbits!
+                 
+             </h1>
+             
+    
+    <h3>Why rabbits make great pets</h3>
+    
+    <ul>
+        <li>They're furry!</li>
+        <li>Great listeners!</li>
+        <li>Eat all your leftover carrots!</li>
+        <li> they are cute </li>
+<li> they rub on you the most affectionate way
+
+     
+    
+    </ul>
+    
+    <h3>Top 3 most famous rabbits</h3>
+    
+    <ol>
+        <li>Bugs bunny</li>
+        <li>Easter Bunny</li>
+        <li>Thumper</li>
+    </ol>
+    
+    <h2>Basic info</h2>
+    
+    <p>Rabbits are little creatures with long ears and puffy tails, and they move their nose up and down in an adorable way. They eat the most orange vegetables in <em>our</em> world, and <strong>they reproduce more than any human <em>ever</em> has</strong>.</p>
+    
+    <p>Rabbits are small mammals in the family Leporidae of the order Lagomorpha. There are eight different genera in the family classified as rabbits, including the European rabbit and cottontail rabbits. The other rabbit species, along with pikas and hares, make up the order Lagomorpha. The male rabbit is called a buck and the female rabbit is a doe; a young rabbit is a kitten or kit (confusingly!).</p>
+    
+    <h2>Songs</h2>
+    
+    <p id="song">Little Bunny Foo Foo, <br>
+I don't want to see you <br>
+scooping up the field mice <br>
+and bopping them on the head!</p>
+
+    </body>
+</html>
